# devops-labs

./: .env  default.nix  flake.nix
.github/workflows/: ci.yaml
app_purescript/: .env  .gitignore  docker-compose.yml  flake.nix  package-lock.json  package.json  spago.yaml  try.sh
app_purescript/dev/: index.js
app_purescript/src/: Main.purs
app_purescript/test/: pyproject.toml
app_purescript/test-purescript/: pyproject.toml
app_purescript/test-purescript/tests/: test_main.py
app_python/: .dockerignore  .env  .envrc  .gitignore  PYTHON.md  default.nix  docker-compose.yml  flake.nix  local.env  pyproject.toml
app_python/app/: main.py
app_python/app/templates/: visits.jinja
env2json/: flake.nix
json2md/: default.nix
k8s/: 12.md  13.md  14.md  README.md
k8s/app-python-chart/: values.yaml
k8s/app-python-chart/files/: config.json
k8s/app-python-chart/templates/: configMap.yaml  deployment.yaml  servicemonitor.yaml  statefulset.yaml
k8s/app_purescript/: Deployment.yaml
k8s/app_python/: Deployment.yaml
nix-files/: ci.nix  commands.nix  default.nix  docs.nix  markdownlint-config.nix  settings.nix  tasks.nix  write-configs.nix
nix-files/github/: ci.nix
nix-files/terraform/: docker.nix  github.nix  yc.nix
