[tool.poetry]
name = "test-purescript"
version = "0.1.0"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-selenium = "^4.0.0"
selenium = "==4.9.1"
pytest-base-url = "^2.0.0"
requests = "^2.31.0"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
